--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </div>
     </div>
     <script>
+	//link to my blog
       function ceblog() {
         location.href = "https://ceelia.v6.navy";
       }
